# Personal-Cloud-database

./: .gitignore  README.md  documentation.md  pyproject.toml  session.txt  testing.md  tree.txt
app/: auth.py  db.py  main.py  models.py  queries.py  schemas.py  settings.py  storage.py
db/: main.py  queries.sql  schema.sql  seed.sql
db/migrations/: env.py
db/migrations/versions/: 0d7b01602328_initial_schema.py
frontend/: app.js  common.js  index.html  login.html  login.js  main.html  main.js  register.html  register.js  styles.css
tests/: conftest.py  test_auth_routes.py  test_file_routes.py
